--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/Aura.AuraHud",NewName="/Script/Aura.AuraHUD")
++PropertyRedirects=(OldName="/Script/Aura.OverlayWidgetController.MessageWidgetRow",NewName="/Script/Aura.OverlayWidgetController.MessageWidgetRowDelegate")
