--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,3 +77,7 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/Aura.AuraHud",NewName="/Script/Aura.AuraHUD")
 +PropertyRedirects=(OldName="/Script/Aura.OverlayWidgetController.MessageWidgetRow",NewName="/Script/Aura.OverlayWidgetController.MessageWidgetRowDelegate")
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
