--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/StartupMap.StartupMap
-EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+;GameDefaultMap=/Game/Maps/StartupMap.StartupMap
+GameDefaultMap=/Game/Maps/MinimalDefault
+;EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Maps/MinimalDefault
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
