--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,9 +2,9 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 ;GameDefaultMap=/Game/Maps/StartupMap.StartupMap
-GameDefaultMap=/Game/Maps/MinimalDefault
+GameDefaultMap=/Game/Maps/StartupMap.StartupMap
 ;EditorStartupMap=/Game/Maps/StartupMap.StartupMap
-EditorStartupMap=/Game/Maps/MinimalDefault
+EditorStartupMap=/Game/Maps/StartupMap.StartupMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
